--- a/jobs.html
+++ b/jobs.html
@@ -35,116 +35,106 @@
   <main>
     <header class="px-0">
       <div style="position: relative;">
-          <img src="./assets/Img/caquis-hero.png" alt="Caquis de mi Jardín" class="w-100">
-        </div>
-        <div style="position: absolute; background-color: black; color: white; top: 200px; left: 0px;">
-          <h1 class="titleJobs m-5">PRINCIPALES TRABAJOS</h1>
-        </div>
+        <img src="./assets/Img/caquis-hero.png" alt="Caquis de mi Jardín" class="w-100">
+      </div>
+      <div style="position: absolute; background-color: black; color: white; top: 200px; left: 0px;">
+        <h4 class="texto-final-home m-3">"Amar a la vida a través del trabajo, es intimar con <br> el más recóndito
+          secreto de la vida."<span id="texto-final-home-span">(Khalil Gibran)</span></h4>
+      </div>
       </div>
     </header>
-
-  <section class="work-cards justify-content-center">
-    <div id="card-jobs" class="card">
-      <div class="image-container">
-        <img src="./assets/Img/logo-entornasol.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
-      </div>
-      <h3 class="card-title">Diseñadora Web / Gestión de Contenidos</h3>
-      <h4 class="card-subtitle">Fundación Entornasol / Programa Tea Time</h4>
-      <p class="card-subtitle">Estrategias de comunicación, creación de contenidos, diseño Ux/Ui y desarrollo front
-        end.</p>
-      <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde octubre de 2023 a la fecha</p>
+    <div>
+      <h1 class="skillsTitle text-center">ESTUDIOS Y CAPACITACIÓN</h1>
     </div>
+    <section class="work-cards justify-content-center">
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <img src="./assets/Img/logo-entornasol.png" class="card-img-top w-50 m-5" alt="Insignia de Front End Trainee">
+        </div>
+        <h3 class="card-title">Diseñadora Web / Gestión de Contenidos</h3>
+        <h4 class="card-subtitle">Fundación Entornasol / Programa Tea Time</h4>
+        <p class="card-subtitle">Estrategias de comunicación, creación de contenidos, diseño Ux/Ui y desarrollo front
+          end.</p>
+        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde octubre de 2023 a la fecha</p>
+      </div>
 
-    <div id="card-jobs" class="card">
-      <div class="image-container">
-        <a href="https://galope.cl/" target="_blank" class="card-link">
-          <img class="card-img-top w-50 m-5" src="./assets/Img/logo-galope.png" alt="Web Agencia Galope"></a>
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://galope.cl/" target="_blank" class="card-link">
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-galope.png" alt="Web Agencia Galope"></a>
+        </div>
+        <div>
+          <h3 class="card-title">Creación y Gestión de Contenidos</h3>
+          <h4 class="card-subtitle">Agencia Galope</h4>
+          <p class="card-subtitle">Estrategias de comunicación, creación de contenidos y diseño Ux/Ui.</p>
+          <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde diciembre de 2022 a septiembre de
+            2023</p>
+          <a href="https://galope.cl/" target="_blank" class="card-link mb-5">Sitio web</a>
+        </div>
       </div>
-      <div>
-        <h3 class="card-title">Creación y Gestión de Contenidos</h3>
-        <h4 class="card-subtitle">Agencia Galope</h4>
-        <p class="card-subtitle">Estrategias de comunicación, creación de contenidos y diseño Ux/Ui.</p>
-        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde diciembre de 2022 a septiembre de
-          2023</p>
-        <a href="https://galope.cl/" target="_blank" class="card-link mb-5">Sitio web</a>
-      </div>
-    </div>
 
-    <div id="card-jobs" class="card">
-      <div class="image-container">
-        <a href="https://edutecno.cl/" target="_blank" class="card-link">
-          <img class="card-img-top w-50 m-5" src="./assets/Img/logo-edutecno.png" alt="Web Edutecno"></a>
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://edutecno.cl/" target="_blank" class="card-link">
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-edutecno.png" alt="Web Edutecno"></a>
+        </div>
+        <h3 class="card-title">Edutecno</h3>
+        <p class="card-info">Desde marzo de 2022 a la fecha</p>
+        <h4 class="card-subtitle">Asistente de tutor</h4>
+        <p class="card-info">Ayudantía de clases front end trainee.</p>
+        <a href="https://edutecno.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
-      <h3 class="card-title">Edutecno</h3>
-      <p class="card-info">Desde marzo de 2022 a la fecha</p>
-      <h4 class="card-subtitle">Asistente de tutor</h4>
-      <p class="card-info">Ayudantía de clases front end trainee.</p>
-      <a href="https://edutecno.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
-    </div>
 
-    <div id="card-jobs" class="card">
-      <div class="image-container">
-        <a href="https://toolmania.cl/" target="_blank" class="card-link">
-          <img class="card-img-top w-50 m-5" src="./assets/Img/logo-toolmania.png" alt="Web Toolmania"></a>
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://toolmania.cl/" target="_blank" class="card-link">
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-toolmania.png" alt="Web Toolmania"></a>
+        </div>
+        <h3 class="card-title">Toolmanía SpA</h3>
+        <p class="card-info">Septiembre de 2022 a marzo de 2023</p>
+        <h4 class="card-subtitle">Front End Developer/Diseño Ui</h4>
+        <p class="card-info">Diseño Ui y desarrollo front end para proyecto de rediseño del header y checkout de
+          e-commerce</p>
+        <a href="https://toolmania.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
-      <h3 class="card-title">Toolmanía SpA</h3>
-      <p class="card-info">Septiembre de 2022 a marzo de 2023</p>
-      <h4 class="card-subtitle">Front End Developer/Diseño Ui</h4>
-      <p class="card-info">Diseño Ui y desarrollo front end para proyecto de rediseño del header y checkout de
-        e-commerce</p>
-      <a href="https://toolmania.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
-    </div>
 
-    <div id="card-jobs" class="card">
-      <div class="image-container">
-        <a href="https://avianet.cl/aviaweb/" target="_blank" class="card-link">
-          <img class="card-img-top w-50 m-5" src="./assets/Img/logo-avianet.png" alt="Web Avianet"></a>
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://avianet.cl/aviaweb/" target="_blank" class="card-link">
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-avianet.png" alt="Web Avianet"></a>
+        </div>
+        <h3 class="card-title">Avianet SpA</h3>
+        <p class="card-info">Entre junio y agosto de 2022</p>
+        <h4 class="card-subtitle">Asesora web</h4>
+        <p class="card-info">Diseño y desarrollo web para pyme</p>
+        <a href="https://avianet.cl/aviaweb/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
-      <h3 class="card-title">Avianet SpA</h3>
-      <p class="card-info">Entre junio y agosto de 2022</p>
-      <h4 class="card-subtitle">Asesora web</h4>
-      <p class="card-info">Diseño y desarrollo web para pyme</p>
-      <a href="https://avianet.cl/aviaweb/" target="_blank" class="card-link">Sitio web de la empresa</a>
-    </div>
 
-    <div id="card-jobs" class="card">
-      <div class="image-container">
-        <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">
-          <img class="card-img-top w-50 m-5" src="./assets/Img/cultura.jpeg" alt="Teatro Pencopolitano"></a>
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">
+            <img class="card-img-top w-50 m-5" src="./assets/Img/cultura.jpeg" alt="Teatro Pencopolitano"></a>
+        </div>
+        <h3 class="card-title">Corporación Cultural Teatro Pencopolitano</h3>
+        <p class="card-info">Entre marzo de 1997 y marzo de 2009</p>
+        <h4 class="card-subtitle">Periodista</h4>
+        <p class="card-info">Gestión Cultural y de Contenidos</p>
+        <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
-      <h3 class="card-title">Corporación Cultural Teatro Pencopolitano</h3>
-      <p class="card-info">Entre marzo de 1997 y marzo de 2009</p>
-      <h4 class="card-subtitle">Periodista</h4>
-      <p class="card-info">Gestión Cultural y de Contenidos</p>
-      <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
-    </div>
-  </section>
-  <!-- <section class="col-3 skills-section">
-    <h4 class="skills-subtitle pt-5" style="margin-top: 150px;">OBJETIVOS LABORALES</h4>
-    <ul class="skills-list my-5">
-      <li class="mt-5">Contribuir con mis habilidades y experiencia en el logro de las metas propuestas.</li>
-      <li class="mt-5"> Abordar los nuevos desafíos de la información y las comunicaciones.</li>
-      <li class="mt-5">Aportar mi experiencia de liderazgo y empatía al equipo de trabajo.</li>
-      <li class="mt-5">Continuar con mi desarrollo humano y profesional.</li>
-    </ul> 
-  </section>-->
+    </section>
 
   </main>
-  <section>
+  <!-- <section>
     <section class="row final-home">
       <h4 class="col-6 texto-final-home m-5">"Amar a la vida a través del trabajo, es intimar con el más recóndito secreto de la vida."
         Khalil Gibran." <span id="texto-final-home-span">(Khalil Gibran)</span></h4>
     </section>
+  </section> -->
+  <section class="px-0">
+    <div style="position: relative;">
+      <img src="./assets/Img/caquis-footer.png" alt="Caquis de mi Jardín" class="w-100">
+    </div>
   </section>
-<section class="px-0">
-  <div style="position: relative;">
-    <img src="./assets/Img/caquis-footer.png" alt="Caquis de mi Jardín" class="w-100">
-  </div>
-  <div style="position: absolute; background-color: black; color: white; top: 200px; left: 0px;">
-    <h1 class="titleJobs m-5">PRINCIPALES TRABAJOS</h1>
-  </div>
-</div>
-</section>
 
   <footer class="footer">
     <div id="footerContainer">
