--- a/index.html
+++ b/index.html
@@ -2,122 +2,114 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="assets/Img/logo-pili.svg">
-    <title>Pilar García Royo</title>
-    <meta name="author" content="Pilar García Royo">
-    <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
-    <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Poiret+One&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./dist/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="assets/Img/logo-pili.svg">
+  <title>Pilar García Royo</title>
+  <meta name="author" content="Pilar García Royo">
+  <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
+  <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Poiret+One&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="logo-container container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
-                <span class="navbar-text text-white ms-3">Pilar García</span>
-                <span class="ms-1 text-secondary">>></span>
-            </a>
-            <nav aria-label="breadcrumb" class="mt-3">
-                <ol id="breadcrumbInicio" class="breadcrumb">
-                  <li class="breadcrumb-item active" aria-current="page">Inicio</li>
-                </ol>
-              </nav>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul id="menu" class="navbar-list navbar-nav ms-auto">
-                </ul>
-            </div>
-        </div>
-    </nav>
-    
-    <section class="my-5 pt-5">
-        <h1 class="epigrafeTituloHome text-center pt-5">PILAR GARCÍA ROYO</h1>
-        <h1 class="epigrafeTituloHome2 text-center">DISEÑADORA WEB & PERIODISTA</h1>
-        <h1 class="tituloHome text-center mt-5">UNA BUENA MEZCLA</h1>
-    </section>
-    <section class="textoHome row">
-        <div class="col-12 col-lg-6 m-3">
-            <p>Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web, especializada en
-                Experiencia de Usuario, Gestión de Contenidos y Desarrollo Front End, con manejo de varios lenguajes
-                de
-                programación y frameworks que puedes <span> <a href="studies.html">revisar aquí.</a></span> Poseo el
-                título de
-                Periodista de la Universidad de
-                Chile con un diplomado en Marketing de la Universidad del Bío-Bío. Soy creativa y con buenas
-                habilidades
-                comunicacionales. Amo el trabajo en equipo, el diseño y la educación continua.</p>
-            <p>Desde que salí como Periodista de la Universidad de Chile, trabajé por 15 años en televisión, radio,
-                instituciones culturales y de educación. Luego, emprendí empresas propias y familiares que cerraron
-                por
-                la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
-                profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
-                llegó el diseño y la programación web.</p>
-            <p class="mt-5">Desde 2020, he trabajado de manera integrada para crear experiencias digitales
-                efectivas y satisfactorias, asegurando una comunicación fluida y efectiva con el usuario a través de
-                distintas
-                estrategias, tales como: </p>
-            <div class="pt-5">
-                <img src="./assets/Img/camaraHome.png" alt="Cámara de fotos" class="img-camara m-3">
-            </div>
-        </div>
-        <section class="col-12 col-lg-5 mt-3">
-            <img src="./assets/Img/biobiovista.png" alt="Río Bío-Bío" id="rio-biobio">
-            <p class="mt-5">Investigar las tendencias de mercado; seleccionar las palabras clave para
-                mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
-                que conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a
-                la
-                retroalimentación de la audiencia, entre otras.</p>
-            <p>Finalmente, te cuento que las fotografías de este portafolio son del campo donde vivo, en Hualqui, a
-                orillas del Río Bío Bío, Chile.</p>
-            <p class="mb-5">Gracias :)</p>
-            <div class="galeria-home text-center mb-5">
-                <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
-                <img src="./assets/Img/otonio.svg" class="campo-img" alt="Otoño">
-                <img src="./assets/Img/caqui-arbol.svg" class="campo-img" alt="Caqui">
-                <img src="./assets/Img/flor.svg" class="campo-img" alt="Flor">
-            </div>
+  <header class="cover-line"></header>
+  <main>
+    <section id="aboutme" class="row m-5">
+      <div class="col-12 col-md-6">
+        <section class="portfolio-experiment">
+          <a>
+            <h1 class="epigrafeTituloCover text-secondary">pilar garcía</h1>
+            <span class="text text-secondary">diseñadora web</span>
+            <span class="line -right"></span>
+            <span class="line -top"></span>
+            <span class="line -left"></span>
+            <span class="line -bottom"></span>
+          </a>
         </section>
-    </section>
-    <section class="row final-home">
-        <h4 class="col-5 texto-final-home m-5">"Me gusta tener libertad y desarrollar mi creatividad plena. Amo el
-            diseño y el lenguaje. Ambos se conjugan perfectamente en mi nueva vocación: el Desarrollo Web."</h4>
-        <div class="col-7 m-5 ps-5">
-            <img src="./assets/Img/mariposa.svg" class="campo-img" alt="Mariposa">
-            <img src="./assets/Img/otonio.svg" class="campo-img" alt="Otoño">
-            <img src="./assets/Img/caqui-arbol.svg" class="campo-img" alt="Caqui">
-            <img src="./assets/Img/flor.svg" class="campo-img" alt="Flor">
-        </div>
-    </section>
-    </main>
 
-    <footer class="footer">
-        <div id="footerContainer">
-            <ul id="socialIconsList" class="nav flex-column">
-                <p class="text-center"><a class="whatsapp-footer text-white" href="https://wa.me/NUMERO_DE_CELULAR"
-                        target="_blank"> <i class="fab fa-whatsapp text-white"></i> +56 994 40 45 16</a></p>
-            </ul>
-        </div>
-    </footer>
+        <section class="cover-ingresar">
+            <a href="index1.html" class="cta">
+                <span>ingresar</span>
+                <svg width="13px" height="10px" viewBox="0 0 13 10">
+                  <path d="M1,5 L11,5"></path>
+                  <polyline points="8 1 12 5 8 9"></polyline>
+                </svg>
+              </a>
+          <!-- <a href="index1.html" class="parrafo-cover"><button type="button"
+              class="btn btn-light boton-cover text-secondary">ingresar</button>
+          </a> -->
+        </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="./src/js/script.js"></script>
-    <script src="./src/js/footer.js"></script>
+      </div>
+      <div class="col-12 col-md-6 container">
+        <div style="height: 400px;"></div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <section class="d-none d-md-block" id="sec-carrusel">
+      <div id="holaCarousel" class="carousel slide pb-3" data-bs-ride="carousel" data-bs-interval="3000"
+        data-bs-pause="false">
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row row-cols-4 gx-3">
+              <div class="col">
+                <img src="assets/Img/animales.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="col">
+                <img src="assets/Img/portafolioDisenio.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="col">
+                <img src="assets/Img/landing-examen-td.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="col">
+                <img src="assets/Img/idma.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row row-cols-4 gx-3">
+              <div class="col">
+                <img src="assets/Img/portafolioFrontend.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="col">
+                <img src="assets/Img/web-toolmania.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="col">
+                <img src="assets/Img/portafolio.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="col">
+                <img src="assets/Img/alfa-web.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="carousel-indicators text-center position-static py-3 mx-auto border-bottom border-2 border-secondary">
+          <button type="button" data-bs-target="#holaCarousel" data-bs-slide-to="0" class="active" aria-current="true"
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#holaCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
+      </div>
+
+    </section>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="./src/js/script.js"></script>
+  <script src="./src/js/footer.js"></script>
 </body>
 
 </html>
