--- a/index.html
+++ b/index.html
@@ -2,114 +2,111 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="assets/Img/logo-pili.svg">
-  <title>Pilar García Royo</title>
-  <meta name="author" content="Pilar García Royo">
-  <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
-  <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Poiret+One&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800&display=swap"
-    rel="stylesheet">
-  <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="./dist/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="assets/Img/logo-pili.svg">
+    <title>Pilar García Royo</title>
+    <meta name="author" content="Pilar García Royo">
+    <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
+    <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Poiret+One&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6270b52527.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./dist/style.css">
 </head>
 
 <body>
-  <header class="cover-line"></header>
-  <main>
-    <section id="aboutme" class="row m-5">
-      <div class="col-12 col-md-6">
-        <section class="portfolio-experiment">
-          <a>
-            <h1 class="epigrafeTituloCover text-secondary">pilar garcía</h1>
-            <span class="text text-secondary">diseñadora web</span>
-            <span class="line -right"></span>
-            <span class="line -top"></span>
-            <span class="line -left"></span>
-            <span class="line -bottom"></span>
-          </a>
-        </section>
+    <header class="cover-line"></header>
+    <main>
+        <section id="aboutme" class="row m-5">
+            <div class="col-12 col-md-6">
+                <section class="portfolio-experiment">
+                    <a>
+                        <h1 class="epigrafeTituloCover text-secondary">pilar garcía</h1>
+                        <span class="text text-secondary">diseñadora web</span>
+                        <span class="line -right"></span>
+                        <span class="line -top"></span>
+                        <span class="line -left"></span>
+                        <span class="line -bottom"></span>
+                    </a>
+                </section>
 
-        <section class="cover-ingresar">
-            <a href="index1.html" class="cta">
-                <span>ingresar</span>
-                <svg width="13px" height="10px" viewBox="0 0 13 10">
-                  <path d="M1,5 L11,5"></path>
-                  <polyline points="8 1 12 5 8 9"></polyline>
-                </svg>
-              </a>
-          <!-- <a href="index1.html" class="parrafo-cover"><button type="button"
-              class="btn btn-light boton-cover text-secondary">ingresar</button>
-          </a> -->
-        </section>
-
-      </div>
-      <div class="col-12 col-md-6 container">
-        <div style="height: 400px;"></div>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <section class="d-none d-md-block" id="sec-carrusel">
-      <div id="holaCarousel" class="carousel slide pb-3" data-bs-ride="carousel" data-bs-interval="3000"
-        data-bs-pause="false">
-
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="row row-cols-4 gx-3">
-              <div class="col">
-                <img src="assets/Img/animales.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="col">
-                <img src="assets/Img/portafolioDisenio.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="col">
-                <img src="assets/Img/landing-examen-td.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="col">
-                <img src="assets/Img/idma.png" class="d-block w-100" alt="...">
-              </div>
+                <section class="cover-ingresar">
+                    <a href="index1.html" class="cta">
+                        <span>ingresar</span>
+                        <svg width="13px" height="10px" viewBox="0 0 13 10">
+                            <path d="M1,5 L11,5"></path>
+                            <polyline points="8 1 12 5 8 9"></polyline>
+                        </svg>
+                    </a>
+                </section>
             </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row row-cols-4 gx-3">
-              <div class="col">
-                <img src="assets/Img/portafolioFrontend.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="col">
-                <img src="assets/Img/web-toolmania.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="col">
-                <img src="assets/Img/portafolio.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="col">
-                <img src="assets/Img/alfa-web.png" class="d-block w-100" alt="...">
-              </div>
+            <div class="col-12 col-md-6 container espaciador-cover">
+                <!-- <div style="height: 400px;"></div> -->
             </div>
-          </div>
-        </div>
-        <div
-          class="carousel-indicators text-center position-static py-3 mx-auto border-bottom border-2 border-secondary">
-          <button type="button" data-bs-target="#holaCarousel" data-bs-slide-to="0" class="active" aria-current="true"
-            aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#holaCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        </div>
-      </div>
+        </section>
+    </main>
+    <footer>
+        <section id="sec-carrusel">
+            <div id="holaCarousel" class="carousel slide pb-3" data-bs-ride="carousel" data-bs-interval="3000"
+                data-bs-pause="false">
 
-    </section>
-  </footer>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row row-cols-4 gx-3">
+                            <div class="col">
+                                <img src="assets/Img/animales.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="col">
+                                <img src="assets/Img/portafolioDisenio.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="col">
+                                <img src="assets/Img/landing-examen-td.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="col">
+                                <img src="assets/Img/idma.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row row-cols-4 gx-3">
+                            <div class="col">
+                                <img src="assets/Img/portafolioFrontend.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="col">
+                                <img src="assets/Img/web-toolmania.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="col">
+                                <img src="assets/Img/portafolio.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="col">
+                                <img src="assets/Img/alfa-web.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="carousel-indicators text-center position-static py-3 mx-auto border-bottom border-2 border-secondary">
+                    <button type="button" data-bs-target="#holaCarousel" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#holaCarousel" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                </div>
+            </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-  <script src="./src/js/script.js"></script>
-  <script src="./src/js/footer.js"></script>
+        </section>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="./src/js/script.js"></script>
+    <script src="./src/js/footer.js"></script>
 </body>
 
 </html>
