--- a/jobs.html
+++ b/jobs.html
@@ -23,14 +23,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="logo-container container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="index1.html">
         <img src="assets/Img/logo-pili.svg" alt="Logo de usuario" class="logo">
-        <span class="navbar-text text-white ms-3">Pilar García</span>
+        <span class="navbar-text text-white ms-3">pilar garcía</span>
         <span class="ms-1 text-secondary">>></span>
       </a>
       <nav aria-label="breadcrumb" class="mt-3">
         <ol id="breadcrumbJobs" class="breadcrumb">
-          <li class="breadcrumb-item active" aria-current="page">Trabajos</li>
+          <li class="breadcrumb-item active" aria-current="page">trabajos</li>
         </ol>
       </nav>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
